<?xml version="1.0"?>
<package>
  <name>g35_description</name>
  <version>0.1.3</version>
  <description>
    g35 is a group of packages for simulating an Infiniti G35 in Gazebo
    with a ROS interface.
  </description>

  <maintainer email="vas0006@auburn.edu">
    V
  </maintainer>
  <license>Apache 2.0</license>

  <author email="vas0006@auburn.edu">V</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
